--- a/fitbit_analysis.ipynb
+++ b/fitbit_analysis.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Jupyter Notebook for 'Better Health, Cheaper Insurance' ##\n",
+    "## Jupyter Notebook for 'ml-fitbit' ##\n",
     "## by Michele De Filippo ##\n",
     "_____________________________________________________________________________________\n",
     "\n",
